CustomObjects/objects/invoiceit_s__Revenue_Period__c.object
<CustomObject>
    <fields>
        <fullName>invoiceit_s__Deferred_Balance_Actual__c</fullName>
        <label>Deferred Balance (Actual)</label>
        <summarizedField>invoiceit_s__Revenue_Transaction__c.invoiceit_s__Deferred_Balance__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Revenue_Transaction__c.invoiceit_s__Revenue_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Deferred_Balance_Projected__c</fullName>
        <label>Deferred Balance (Projected)</label>
        <summarizedField>invoiceit_s__Revenue_Forecast__c.invoiceit_s__Deferred_Balance__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Revenue_Forecast__c.invoiceit_s__Revenue_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Amount_Actual__c</fullName>
        <label>Revenue Amount (Actual)</label>
        <summarizedField>invoiceit_s__Revenue_Transaction__c.invoiceit_s__Revenue_Amount__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Revenue_Transaction__c.invoiceit_s__Revenue_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Amount_Projected__c</fullName>
        <label>Revenue Amount (Projected)</label>
        <summarizedField>invoiceit_s__Revenue_Forecast__c.invoiceit_s__Revenue_Amount__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Revenue_Forecast__c.invoiceit_s__Revenue_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Period_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Period Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Period_End_Date__c</fullName>
        <label>Revenue Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Revenue_Period_Start_Date__c</fullName>
        <label>Revenue Period Start Date</label>
        <type>Date</type>
    </fields>
    <label>Revenue Period</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Revenue_Period_Start_Date__c</columns>
        <columns>invoiceit_s__Revenue_Period_End_Date__c</columns>
        <columns>invoiceit_s__Revenue_Period_Closed__c</columns>
        <columns>invoiceit_s__Revenue_Amount_Projected__c</columns>
        <columns>invoiceit_s__Deferred_Balance_Projected__c</columns>
        <columns>invoiceit_s__Revenue_Amount_Actual__c</columns>
        <columns>invoiceit_s__Deferred_Balance_Actual__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Revenue Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Changes_cannot_be_made_to_Closed_Periods</fullName>
        <active>true</active>
        <description>The revenue period details cannot be changed once the period is closed</description>
        <errorConditionFormula>(
ISCHANGED(invoiceit_s__Revenue_Amount_Actual__c) 
|| 
ISCHANGED(invoiceit_s__Deferred_Balance_Actual__c)
||
ISCHANGED(invoiceit_s__Revenue_Amount_Projected__c)
|| 
ISCHANGED(invoiceit_s__Deferred_Balance_Projected__c) 
||
ISCHANGED(invoiceit_s__Revenue_Period_Start_Date__c) 
||
ISCHANGED(invoiceit_s__Revenue_Period_End_Date__c) 
)
&amp;&amp;  
invoiceit_s__Revenue_Period_Closed__c</errorConditionFormula>
        <errorMessage>This revenue period is closed. You cannot add/remove revenue transactions against a closed period.</errorMessage>
    </validationRules>
</CustomObject>